@@ -4,6 +4,6 @@
     android:previewImage="@drawable/widget_preview"
     android:minHeight="42dp"
     android:minWidth="136dp"
-    android:updatePeriodMillis="1800000" >
+    android:updatePeriodMillis="6400000" >
 
 </appwidget-provider>
