@@ -6,6 +6,8 @@ import java.util.Date;
 import android.app.Notification;
 import android.app.NotificationManager;
 import android.app.PendingIntent;
+import android.appwidget.AppWidgetManager;
+import android.content.ComponentName;
 import android.content.Context;
 import android.content.Intent;
 import android.content.SharedPreferences;
@@ -21,6 +23,7 @@ import android.util.Log;
 import com.ae.apps.messagecounter.R;
 import com.ae.apps.messagecounter.activities.MainActivity;
 import com.ae.apps.messagecounter.db.CounterDataBaseAdapter;
+import com.ae.apps.messagecounter.receivers.WidgetUpdateReceiver;
 import com.ae.apps.messagecounter.utils.AppConstants;
 import com.ae.apps.messagecounter.utils.MessageCounterUtils;
 
@@ -32,9 +35,12 @@ import com.ae.apps.messagecounter.utils.MessageCounterUtils;
  */
 public class SMSObserver extends ContentObserver {
 
-	private Uri		observableUri	= null;
-	private Context	mContext		= null;
-	private String	mLastMessageId	= null;
+	private static final String	COLUMN_NAME_PROTOCOL	= "protocol";
+	private static final String	COLUMN_NAME_ID			= "_id";
+
+	private Uri					observableUri			= null;
+	private Context				mContext				= null;
+	private String				mLastMessageId			= null;
 
 	public SMSObserver(Handler handler, Context context, Uri uriToObserve) {
 		super(handler);
@@ -48,10 +54,10 @@ public class SMSObserver extends ContentObserver {
 		Cursor cursor = mContext.getContentResolver().query(observableUri, null, null, null, null);
 		if (cursor.moveToNext()) {
 			// We need the protocol and the message _id
-			String messageId = cursor.getString(cursor.getColumnIndex("_id"));
-			String protocol = cursor.getString(cursor.getColumnIndex("protocol"));
+			String messageId = cursor.getString(cursor.getColumnIndex(COLUMN_NAME_ID));
+			String protocol = cursor.getString(cursor.getColumnIndex(COLUMN_NAME_PROTOCOL));
 
-			// See if this message was processed earlier
+			// See if this message was processed earlier, sometimes same messageId can come multiple times
 			boolean isNewMessage = (mLastMessageId == null || !mLastMessageId.equals(messageId));
 
 			// protocol will be null for sent messages
@@ -80,25 +86,21 @@ public class SMSObserver extends ContentObserver {
 						Resources resources = mContext.getResources();
 						String notificationTitle = resources.getString(R.string.str_sms_limit_notif_title);
 						String notificationText = resources.getString(R.string.str_sms_limit_notif_text);
-						
+
 						// Crete the intent for running this app when user clicks on the notification
 						Intent resultIntent = new Intent(mContext, MainActivity.class);
 						PendingIntent resultPendingIntent = PendingIntent
-								.getActivity(mContext, AppConstants.NOTIFICATION_REQUEST_CODE, resultIntent, 
+								.getActivity(mContext, AppConstants.NOTIFICATION_REQUEST_CODE, resultIntent,
 										PendingIntent.FLAG_UPDATE_CURRENT);
 						Notification notification = new NotificationCompat.Builder(mContext)
-								.setContentIntent(resultPendingIntent)
-								.setContentTitle(notificationTitle)
-								.setContentText(notificationText)
-								.setNumber(userLimit)
-								.setSmallIcon(R.drawable.ic_app_icon)
-								.setAutoCancel(true)
-								.build();
-						
+								.setContentIntent(resultPendingIntent).setContentTitle(notificationTitle)
+								.setContentText(notificationText).setNumber(userLimit)
+								.setSmallIcon(R.drawable.ic_app_icon).setAutoCancel(true).build();
+
 						// Get an instance of the notification manager service
 						NotificationManager notificationManager = (NotificationManager) mContext
 								.getSystemService(Context.NOTIFICATION_SERVICE);
-						
+
 						// Show a notification to the user here "send message for this cycle has reached limit"
 						notificationManager.notify(0, notification);
 					}
@@ -110,9 +112,25 @@ public class SMSObserver extends ContentObserver {
 				// Store this message id incase we get multiple callbacks for the same id
 				Log.d("SendSMSObserver", " An SMS was sent at " + date.getTime() + " with id " + messageId);
 				mLastMessageId = messageId;
+
+				// Send a broadcast to update the widgets here
+				sendWidgetUpdateBroadcast();
 			}
 		}
 		cursor.close();
+	}
+
+	private void sendWidgetUpdateBroadcast() {
+		// We try to send a broadcast to trigger the widget update call
+		Intent intent = new Intent(mContext, WidgetUpdateReceiver.class);
+		intent.setAction(AppWidgetManager.ACTION_APPWIDGET_UPDATE);
+		// Get all the widgetIds
+		int appWidgetIds[] = AppWidgetManager.getInstance(mContext).getAppWidgetIds(
+				new ComponentName(mContext, WidgetUpdateReceiver.class));
+		intent.putExtra(AppWidgetManager.EXTRA_APPWIDGET_IDS, appWidgetIds);
+
+		// Finally send the broadcast through the system
+		mContext.sendBroadcast(intent);
 	}
 
 }
